--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,8 +14,13 @@ dependencies:
   cupertino_icons: ^1.0.2
   ionicons: ^0.2.2
   google_fonts: ^6.1.0
-  firebase_core: ^2.24.2
-  firebase_auth: ^4.15.3
+  firebase_auth: ^5.7.0
+  firebase_core: ^3.0.0
+  google_sign_in: ^6.1.5
+  flutter_facebook_auth: ^6.0.2
+  sign_in_with_apple: ^5.0.0
+  font_awesome_flutter: ^10.1.0 #
+
 
 dev_dependencies:
   flutter_test:
