--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,30 +1,34 @@
 name: ai_doctor_app
-description: A styled frontend for an AI Doctor app.
-publish_to: 'none'
-
+description: AI Doctor Flutter App (No Firebase)
+publish_to: 'none' 
 version: 1.0.0+1
 
 environment:
-  sdk: '>=2.17.0 <3.0.0'
+  sdk: ">=3.1.0 <4.0.0"
 
 dependencies:
   flutter:
     sdk: flutter
 
-  cupertino_icons: ^1.0.2
-  ionicons: ^0.2.2
-  google_fonts: ^6.1.0
-  firebase_auth: ^5.7.0
-  firebase_core: ^3.0.0
-  google_sign_in: ^6.1.5
-  flutter_facebook_auth: ^6.0.2
-  sign_in_with_apple: ^5.0.0
-  font_awesome_flutter: ^10.1.0 #
+  # UI & Utility
+  cupertino_icons: ^1.0.6
+  file_picker: ^6.1.1
+  image_picker: ^1.1.0
+  path_provider: ^2.1.2
+  permission_handler: ^11.3.1
+  flutter_sound: ^9.3.9
+  url_launcher: ^6.2.6
 
+  # State management (optional but useful)
+  provider: ^6.1.2
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  flutter_lints: ^2.0.3
+  flutter_lints: ^3.0.1
+
 flutter:
   uses-material-design: true
+
+  assets:
+    - lib/assets/
