--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,6 +11,7 @@ dependencies:
     sdk: flutter
 
   # UI & Utility
+  logger: ^2.0.2
   cupertino_icons: ^1.0.6
   file_picker: ^6.1.1
   image_picker: ^1.1.0
